# spartan

./: .gitmodules  CMakeCache.txt  CMakeLists.txt
apps/chris/: groundTruthAnnotaionPanel.py  start_app.sh
models/iiwa/director/: director_config_dual_box_rot.json  stored_poses_dual.json
modules/spartan/manipulation/: schunk_driver.py
modules/spartan/mcubeUROP/find_apriltag_corners/: CMakeLists.txt  calib3d2d.py  check_webcam_vs_robot.py  extract_corners_from_apriltag.py  extract_corners_from_img.py  find_corners.cpp  find_corners_pythonhelper.cpp  full_calibration.py
modules/spartan/mcubeUROP/find_apriltag_corners/buildx/: CMakeCache.txt  cmake_install.cmake  find_corners
modules/spartan/mcubeUROP/find_apriltag_corners/camera_calib/: 1507063016.321897.pgm  1507063016.993874.pgm  1507063017.666149.pgm  1507063020.421206.pgm  1507063021.093235.pgm  1507063021.798848.pgm  1507063024.520530.pgm  1507063025.226195.pgm  1507063025.931784.pgm  1507063031.408750.pgm  1507063032.111280.pgm  1507063032.778495.pgm  1507063035.484571.pgm  1507063036.151791.pgm  1507063036.819026.pgm  1507063039.554680.pgm  1507063040.255232.pgm  1507063040.955805.pgm  1507063046.430404.pgm  1507063047.097626.pgm  1507063047.764818.pgm  1507063050.544348.pgm  1507063051.244941.pgm  1507063051.912199.pgm  1507063054.681320.pgm  1507063055.383641.pgm  1507063056.088063.pgm  data.extracted2d.json  data.json
setup/docker/: install_dependencies.sh
src/DepthSim/python/: app.py
src/DepthSim/src/: CMakeLists.txt  cloud_to_mesh.cpp
src/catkin_projects/camera_config/data/1112170110/master/: camera_info.yaml
src/catkin_projects/station_config/RLG_iiwa_1/: rviz.rviz
src/iiwa_tri/: iiwaManipApp.py  iiwa_hardware.pmd  make_canned_plan.py  run_canned_plan.sh  rundualapp_box_rot.sh
